# ClashOfNotelek_s

./: CMakeLists.txt  CmakeLists.txt  README.md
assets/sprite/: hi.json
include/: BaseState.hpp  Engine.hpp
include/Command/: Command.hpp  PlayerCommand.hpp  SpriteCommand.hpp
include/Engine/: Engine.hpp  Enviroment.hpp
include/Event/: CollisionEvent.hpp  Event.hpp  EventDispatcher.hpp  EventQueue.hpp  PlayerEvent.hpp  SpriteEvent.hpp
include/Graphic/: Base.hpp  Board.hpp  Button.hpp  Collision.hpp  Enemy.hpp  HealthBar.hpp  HitBox.hpp  LeafFalling.hpp  MapEntity.hpp  Player.hpp  PlayerHealthbar.hpp  ScreenShake.hpp  SlimeBar.hpp  SmokeVFX.hpp  Sprite.hpp  TroppyCup.hpp  Wall.hpp  Water.hpp  Weapon.hpp
include/Resources/: AudioHolder.hpp  FontHolder.hpp  ResourcesHolder.hpp  ResourcesManager.hpp  TextureHolder.hpp
include/State/: BaseState.hpp  DeadScreen.hpp  HomeScreen.hpp  HomeState.hpp  KnockbackHandler.hpp  PlayerState.hpp  Screen.hpp  ScreenState.hpp  SpriteState.hpp  StartScreen.hpp  StartState.hpp  WinScreen.hpp
include/Utility/: Command.hpp  Enviroment.hpp  Environment.hpp  IDGenerator.hpp  Logger.hpp  ResourcesUtility.hpp
src/: main.cpp
src/Command/: PlayerCommand.cpp  SpriteCommand.cpp
src/Engine/: Engine.cpp
src/Event/: CollisionEvent.cpp  EventDispatcher.cpp  EventQueue.cpp  PlayerEvent.cpp  SpriteEvent.cpp
src/Graphic/: Base.cpp  Board.cpp  Button.cpp  Collision.cpp  Enemy.cpp  HealthBar.cpp  Hitbox.cpp  LeafFalling.cpp  MapEntity.cpp  Player.cpp  PlayerHeathBar.cpp  ScreenShake.cpp  SlimeBar.cpp  SmokeVFX.cpp  Sprite.cpp  TroppyCup.cpp  Wall.cpp  Water.cpp  Weapon.cpp
src/Resources/: AudioHolder.cpp  FontHolder.cpp  ResourcesHolder.cpp  ResourcesManager.cpp  TextureHolder.cpp
src/State/: BaseState.cpp  DeadScreen.cpp  HomeScreen.cpp  HomeState.cpp  KnockbackHandler.cpp  PlayerState.cpp  Screen.cpp  SpriteState.cpp  StartScreen.cpp  StartState.cpp  WinsScreen.cpp
src/Utility/: IDGenerator.cpp  Logger.cpp
uml/: Command.puml  Engine.puml
uml/Event/: BaseEvent.puml  CollisionEvent.puml  EventDispatcher.puml  EventQueue.puml  PlayerEvent.puml  SpriteEvent.puml
uml/Graphic/: Base.puml  Board.puml  Button.puml  Collision.puml  Enemy.puml  HealthBar.puml  KnockbackHandler.puml  Leaf.puml  Player.puml  ScreenShake.puml  SlimeBar.puml  SmokeVFX.puml  Sprite.puml  TroppyCup.puml  Wall.puml  Water.puml  Weapon.puml
uml/Resources/: AudioHolder.puml  FontHolder.puml  ResourcesHolder.puml  ResourcesManager.puml  TextureHolder.puml
uml/Screen/: DeadScreen.puml  HomeScreen.puml  Screen.puml  StartScreen.puml  WinScreen.puml
uml/State/: BaseState.puml  PlayerState.puml  SpriteState.puml
uml/Utilities/: IDGenerator.puml
